# open-api/api-docs.json
@@ -39,6 +39,17 @@
           }
         }
       },
+      "LoginRequest": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
       "ErrorResponse": {
         "type": "object",
         "properties": {
@@ -51,6 +62,9 @@
         "type": "object",
         "properties": {
           "phoneNumber": {
+            "type": "string"
+          },
+          "password": {
             "type": "string"
           },
           "selectedHospitals": {
